# Data-Science-and-AI-Training

./: .gitignore
01. python-basics/: api.py  function.py  pyproject.toml
02. Numpy and Pandas/: main.py  p.py  pyproject.toml
03. Titanic Dataset Analysis (EDA)/: main.py  pyproject.toml
05. IQR Method/: f.ipynb  program.ipynb  pyproject.toml
06. Scaling/: main.py  pyproject.toml  sales-ttest.ipynb
06. Scaling and T-Test/: scaling.ipynb
06. Scaling and T-Test/t-test/: teaching.ipynb  website_performance.ipynb
07. Corelation_Scatterplot_Heatmap_Iris Dataset/: main.py  program.ipynb  pyproject.toml
08. FastAPI and StreamLit/: README.md
08. FastAPI and StreamLit/Basics Implementation/: api.py  app.py  pyproject.toml
09. Linear Regression/: pyproject.toml  simple_linear_regression.ipynb
10. Multiple and Polynomial Regression/: multiple_linear_regression.ipynb  polynomial_regression.ipynb  pyproject.toml
11.Decision Tree _Iris/: classification.ipynb  pyproject.toml
12. Confusion Matrix _ HeatMap/: main.ipynb  pyproject.toml
13. K Means Clustering/: main.ipynb  pyproject.toml
14. Regression and Classification using NN/: classification_using_neural_network.ipynb  main.py  pyproject.toml  simple_linear_regresssion_using_neural_network.ipynb
15. Misc + Wrapup/API Calls to LLMs/: llm_api_call.ipynb  llm_api_call_with_image.ipynb
15. Misc + Wrapup/Hugging Face/: hugging_face.ipynb
15. Misc + Wrapup/Vector Embeddings/: Program1.ipynb  Program2.ipynb  Program3.ipynb
python-basics/: main.py  pyproject.toml
temp/: main.py  pyproject.toml
